--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="fullpage">
         <section class="vertical-scrolling">
             <div>
-                <img src="../portfolio/img/afif.jpg">
+                <img src="/img/afif.jpg">
             </div>
             <h2>Sayed Afif</h2>
             <h3>A Software Developer.</h3>
@@ -86,7 +86,7 @@
                 <h2>Projects</h2>
                 <h3>Results Mirror</h3>
                 <div class="image-container">
-                    <a href="https://github.com/prayashm/cet-results-mirror" target="_blank"><img src="../portfolio/img/results-mirror.png" border="0"></a>
+                    <a href="https://github.com/prayashm/cet-results-mirror" target="_blank"><img src="/img/results-mirror.png" border="0"></a>
                 </div>
 
             </div>
@@ -94,7 +94,7 @@
                 <h2>Projects</h2>
                 <h3>Carbon Apparel</h3>
                 <div class="image-container">
-                    <a href="http://carbon-apparel.bitballoon.com/" target="_blank"><img src="../portfolio/img/carbon.png" border="0"></a>
+                    <a href="http://carbon-apparel.bitballoon.com/" target="_blank"><img src="/img/carbon.png" border="0"></a>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                 <h2>Projects</h2>
                 <h3>shops.nowfloats</h3>
                 <div class="image-container">
-                    <a href="https://shops.nowfloats.com/India/Bangalore/" target="_blank"><img src="../portfolio/img/nowfloats.png" border="0"></a>
+                    <a href="https://shops.nowfloats.com/India/Bangalore/" target="_blank"><img src="/img/nowfloats.png" border="0"></a>
                 </div>
             </div>
 
@@ -110,14 +110,14 @@
                 <h2>Projects</h2>
                 <h3>Wikipedia Viewer</h3>
                 <div class="image-container">
-                    <a href="https://codepen.io/sayedafif/full/KgKLXb" target="_blank"><img src="../portfolio/img/wikipedia-viewer.png" border="0"> </a>
+                    <a href="https://codepen.io/sayedafif/full/KgKLXb" target="_blank"><img src="/img/wikipedia-viewer.png" border="0"> </a>
                 </div>
             </div>
             <div class="horizontal-scrolling">
                 <h2>Projects</h2>
                 <h3>JavaScript Calculator</h3>
                 <div class="image-container">
-                    <a href="https://codepen.io/sayedafif/full/YWBrKv" target="_blank"><img src="../portfolio/img/calculator.png" border="0"> </a>
+                    <a href="https://codepen.io/sayedafif/full/YWBrKv" target="_blank"><img src="/img/calculator.png" border="0"> </a>
                 </div>
             </div>
 
@@ -129,47 +129,47 @@
             <div id="skills">
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/html5.png" alt="HTML" title="HTML">
+                    <img class="tagIcon" src="/img/icons/html5.png" alt="HTML" title="HTML">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/css3.png" alt="CSS3" title="CSS3">
+                    <img class="tagIcon" src="/img/icons/css3.png" alt="CSS3" title="CSS3">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/javascript.png" alt="JavaScript" title="JavaScript">
+                    <img class="tagIcon" src="/img/icons/javascript.png" alt="JavaScript" title="JavaScript">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/jquery.png" alt="jQuery" title="jQuery">
+                    <img class="tagIcon" src="/img/icons/jquery.png" alt="jQuery" title="jQuery">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/bootstrap.png" alt="Bootstrap" title="Bootstrap">
+                    <img class="tagIcon" src="/img/icons/bootstrap.png" alt="Bootstrap" title="Bootstrap">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/git.png" alt="GIT" title="GIT">
+                    <img class="tagIcon" src="/img/icons/git.png" alt="GIT" title="GIT">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/mysql.png" alt="MYSQL" title="MYSQL">
+                    <img class="tagIcon" src="/img/icons/mysql.png" alt="MYSQL" title="MYSQL">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/mailchimp.jpg" alt="mailchimp" title="mailchimp">
+                    <img class="tagIcon" src="/img/icons/mailchimp.jpg" alt="mailchimp" title="mailchimp">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/aspnet.png" alt="ASP.NET" title="ASP.NET">
+                    <img class="tagIcon" src="/img/icons/aspnet.png" alt="ASP.NET" title="ASP.NET">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/bot-framework.png" alt="Bot Framework" title="Bot Framework">
+                    <img class="tagIcon" src="/img/icons/bot-framework.png" alt="Bot Framework" title="Bot Framework">
                 </div>
 
                 <div class="skill-container">
-                    <img class="tagIcon" src="../portfolio/img/icons/sql-server.svg" alt="SQL-Server" title="SQL-Server">
+                    <img class="tagIcon" src="/img/icons/sql-server.svg" alt="SQL-Server" title="SQL-Server">
                 </div>
                 <h4> ..... And I am ready to learn a lot more things. </h4>
             </div>
@@ -178,7 +178,7 @@
         <section class="vertical-scrolling" id="xyz">
 
             <h2>Contact </h2>
-            <img src="../portfolio/img/table-front.png" id="contact-image">
+            <img src="/img/table-front.png" id="contact-image">
             <h4> Reach out to me! </h4>
             <div id="contact">
 
