Added Resume button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             </div>
             <h2>Sayed Afif</h2>
             <h3>A Software Developer.</h3>
+            <ul>
+                <li>
+                    <a href="https://bit.ly/2Zkfzdg" target="_blank" class="btn btn-default btn-med"><i class="fa fa-file fa-fw"></i> <span>View Resume</span></a>
+                </li>
+            </ul>
             <div class="scroll-icon">
                 <p>Do you really just want to hire me?</p>
                 <a href="#fifthSection/1" class="icon-up-open-big"></a>
