Added Resume and Minor Responsive Fixes

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
     <div id="fullpage">
         <section class="vertical-scrolling">
-            <div>
-                <img src="/img/afif.jpg">
+            <div class="main-content">
+                <img id="profile-pic" src="/img/afif.jpg">
+                <h2>Sayed Afif</h2>
+                <h3>A Software Developer.</h3>
+                <ul>
+                    <li>
+                        <a href="https://bit.ly/2Zkfzdg" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-file fa-fw"></i> <span>View Resume</span></a>
+                    </li>
+                </ul>
             </div>
-            <h2>Sayed Afif</h2>
-            <h3>A Software Developer.</h3>
-            <ul>
-                <li>
-                    <a href="https://bit.ly/2Zkfzdg" target="_blank" class="btn btn-default btn-med"><i class="fa fa-file fa-fw"></i> <span>View Resume</span></a>
-                </li>
-            </ul>
             <div class="scroll-icon">
                 <p>Do you really just want to hire me?</p>
                 <a href="#fifthSection/1" class="icon-up-open-big"></a>
@@ -91,7 +91,7 @@
                 <h2>Projects</h2>
                 <h3>Results Mirror</h3>
                 <div class="image-container">
-                    <a href="https://github.com/prayashm/cet-results-mirror" target="_blank"><img src="/img/results-mirror.png" border="0"></a>
+                    <a href="https://github.com/prayashm/cet-results-mirror" target="_blank"><img class = "project-img" src="/img/results-mirror.png" border="0"></a>
                 </div>
 
             </div>
@@ -99,7 +99,7 @@
                 <h2>Projects</h2>
                 <h3>Carbon Apparel</h3>
                 <div class="image-container">
-                    <a href="http://carbon-apparel.bitballoon.com/" target="_blank"><img src="/img/carbon.png" border="0"></a>
+                    <a href="http://carbon-apparel.bitballoon.com/" target="_blank"><img class = "project-img" src="/img/carbon.png" border="0"></a>
                 </div>
             </div>
 
@@ -107,7 +107,7 @@
                 <h2>Projects</h2>
                 <h3>shops.nowfloats</h3>
                 <div class="image-container">
-                    <a href="https://shops.nowfloats.com/India/Bangalore/" target="_blank"><img src="/img/nowfloats.png" border="0"></a>
+                    <a href="https://shops.nowfloats.com/India/Bangalore/" target="_blank"><img class = "project-img" src="/img/nowfloats.png" border="0"></a>
                 </div>
             </div>
 
@@ -115,14 +115,14 @@
                 <h2>Projects</h2>
                 <h3>Wikipedia Viewer</h3>
                 <div class="image-container">
-                    <a href="https://codepen.io/sayedafif/full/KgKLXb" target="_blank"><img src="/img/wikipedia-viewer.png" border="0"> </a>
+                    <a href="https://codepen.io/sayedafif/full/KgKLXb" target="_blank"><img class = "project-img" src="/img/wikipedia-viewer.png" border="0"> </a>
                 </div>
             </div>
             <div class="horizontal-scrolling">
                 <h2>Projects</h2>
                 <h3>JavaScript Calculator</h3>
                 <div class="image-container">
-                    <a href="https://codepen.io/sayedafif/full/YWBrKv" target="_blank"><img src="/img/calculator.png" border="0"> </a>
+                    <a href="https://codepen.io/sayedafif/full/YWBrKv" target="_blank"><img class = "project-img" src="/img/calculator.png" border="0"> </a>
                 </div>
             </div>
 
