Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3 class="l-left">Resume</h3></a>
 
             <a target="_blank" href="https://bot.sayedafif.com">
-                <h4 class="l-right">Talk to my Virtual Assistannt</h4></a>
+                <h4 class="l-right">Talk to my Virtual Assistant</h4></a>
 
         </div>
 
